# alpha-trees

./: .gitignore  README.md
Images/: bird-out.ppm  skylight-out.ppm
Images/Output/: example.ppm  gray.ppm  output.ppm  random.ppm  rgb_spectrum.ppm  testing.ppm  triangle.ppm  white.ppm
Images/ReadmeImages/: circle.ppm  colored.ppm  filled.ppm  gray.ppm  inverted.ppm  lines.ppm  point.ppm  rect.ppm
Images/Research/BlackWhite/: diagonal_bl_tr_transition.ppm  diagonal_tl_br_transition.ppm  horizontal_transition.ppm  vertical_no_transition.ppm  vertical_transition.ppm
Images/Research/Real/Results/Cosine/11/: Cosine-1-zernike_11.ppm  Cosine-10-zernike_11.ppm  (+18 more)
Images/Research/Real/Results/Test/: 10-apollo.ppm  10-landscape.ppm  10-monument.ppm  10-skylight.ppm  100-apollo.ppm  100-landscape.ppm  100-monument.ppm  100-skylight.ppm  1000-apollo.ppm  1000-landscape.ppm  1000-monument.ppm  1000-skylight.ppm  2000-apollo.ppm  2000-landscape.ppm  2000-monument.ppm  2000-skylight.ppm
Images/Research/Synthetic/Source/: p1_diagonal_bl_tr_no_transition.ppm  p1_diagonal_bl_tr_transition.ppm  p1_diagonal_tl_br_no_transition.ppm  p1_diagonal_tl_br_transition.ppm  p1_horizontal_no_transition.ppm  p1_horizontal_transition.ppm  p1_vertical_no_transition.ppm  p1_vertical_transition.ppm  p2_diagonal_bl_tr_no_transition.ppm  p2_diagonal_bl_tr_transition.ppm  p2_diagonal_tl_br_no_transition.ppm  p2_diagonal_tl_br_transition.ppm  p2_horizontal_no_transition.ppm  p2_horizontal_transition.ppm  p2_vertical_no_transition.ppm  p2_vertical_transition.ppm  p3_diagonal_bl_tr_no_transition.ppm  p3_diagonal_bl_tr_transition.ppm  p3_diagonal_tl_br_no_transition.ppm  p3_diagonal_tl_br_transition.ppm  p3_horizontal_no_transition.ppm  p3_horizontal_transition.ppm  p3_vertical_no_transition.ppm  p3_vertical_transition.ppm  p4_diagonal_bl_tr_no_transition.ppm  p4_diagonal_bl_tr_transition.ppm  p4_diagonal_tl_br_no_transition.ppm  p4_diagonal_tl_br_transition.ppm  p4_horizontal_no_transition.ppm  p4_horizontal_transition.ppm  p4_vertical_no_transition.ppm  p4_vertical_transition.ppm  p5_diagonal_bl_tr_no_transition.ppm  p5_diagonal_bl_tr_transition.ppm  p5_diagonal_tl_br_no_transition.ppm  p5_diagonal_tl_br_transition.ppm  p5_horizontal_no_transition.ppm  p5_horizontal_transition.ppm  p5_vertical_no_transition.ppm  p5_vertical_transition.ppm  (+8 more)
alpha-tree/: CMakeLists.txt  Makefile  RGBsaliencetree  RGBsaliencetree.c  SteamProfile-Half.ppm  experiment.sh  main.c  main.cpp  out-2.ppm  out.ppm  saliencetree
alpha-tree/source/: AlphaTree.cpp  AlphaTree.h  CMakeLists.txt  DistanceFunction.h  EdgeQueue.c  EdgeQueue.cpp  EdgeQueue.h  Makefile  SalienceTree.c  SalienceTree.cpp  SalienceTree.h  TreeDisplay.cpp  TreeDisplay.h  TreeFilter.h
alpha-tree/source/gabor/: CMakeLists.txt  gabor.cpp  gabor.h
alpha-tree/util/: CMakeLists.txt  DistanceMeasures.c  DistanceMeasures.h  EdgeDetection.c  EdgeDetection.h  Makefile  PPMImageReadWrite.c  PPMImageReadWrite.cpp  PPMImageReadWrite.h  TreeFilter.c  TreeFilter.cpp  TreeFilter.h  common.h  util.c  util.cpp  util.h
ppm-processing/: README.md
ppm-processing/Code/: main.cpp
ppm-processing/Code/source/: create_images.cpp  create_images.h  image_generator.cpp  image_generator.h  paths.h  user_mode.cpp  user_mode.h
scripts/: convert_to_png.sh  rename_files.sh
(+262 files in other folders)
