cmake_minimum_required(VERSION 3.23.3)
project( AlphaTree )
find_package( OpenCV 4 REQUIRED )
add_executable( ${PROJECT_NAME} main.cpp )
include_directories(${OpenCV_INCLUDE_DIRS} util source)
link_directories( source util )
add_subdirectory( source )
add_subdirectory( util )
target_include_directories(${PROJECT_NAME} PUBLIC util source)
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} EdgeQueue SalienceTree DistanceMeasures util)
